# OOP

./: CMakeLists.txt  Command.h  Demo.json  Fetch.h  Fetcher.h  Parser.cpp  Parser.h  README.md  Semantic.cpp  Semantic.h  Tokenizer.cpp  Tokenizer.h  build.sh  build_tests.sh  main  main.cpp  ppt-cli  run_tests
Action/: AddShapeAction.cpp  AddShapeAction.h  AddSlideAction.cpp  AddSlideAction.h  Editor.cpp  Editor.h  IAction.h  RemoveShapeAction.cpp  RemoveShapeAction.h  RemoveSlideAction.cpp  RemoveSlideAction.h  ShapeActions.h  SlideActions.h
CLI/: Argument.cpp  Argument.h  CommandFactory.cpp  CommandFactory.h  Controller.cpp  Controller.h  Help.h  ICommand.h  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h
CLI/Command/: AddCommand.cpp  AddCommand.h  Argument.h  CommandCreator.h  CommandCreators.h  ICommand.h  ListCommand.cpp  ListCommand.h  LoadCommand.cpp  LoadCommand.h  MetaCommand.h  RemoveCommand.cpp  RemoveCommand.h  SaveCommand.cpp  SaveCommand.h  SetCommand.cpp  SetCommand.h
CLI/Controller/: Controller.cpp  Controller.h
CLI/Parser/: Parser.cpp  Parser.h  Token.h  Tokenizer.cpp  Tokenizer.h
CLI/Repository/: CommandRepository.cpp  CommandRepository.h
Command/: AddCommand.cpp  AddCommand.h  Argument.cpp  Argument.h  CommandFactory.cpp  CommandFactory.h  ICommand.h  ListCommand.cpp  ListCommand.h  LoadCommand.h  RemoveCommand.cpp  RemoveCommand.h  SaveCommand.h
Controller/: Controller.cpp  Controller.h
Document/: BaseSlideObject.cpp  BaseSlideObject.h  Circle.cpp  Circle.h  JSONSerializer.h  Line.cpp  Line.h  Presentation.cpp  Presentation.h  Presentation_cli.h  Rectangle.cpp  Rectangle.h  Slide.cpp  Slide.h  SlideObject.h  Slide_cli.h  TextObject.cpp  TextObject.h
Document/Elements/: BoundingBox.cpp  BoundingBox.h  Ellipse.h  IShape.h  Line.h  Rectangle.h  Shape.cpp  Shape.h  TextArea.h  Triangle.h
Document/Models/: BoundingBox.cpp  BoundingBox.h  Shape.cpp  Shape.h
Geometry/: Geometry.h
Parser/: CommandFactory.cpp  CommandFactory.h  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h
Rendering/: IBrush.h  ICanvas.h  IPainter.h  IPen.h  PaintProperties.h  RenderCommand.cpp  RenderCommand.h  SVGCanvas.h  SVGPainter.cpp  SVGPainter.h
Semantic/: Semantic.cpp  Semantic.h
Semantic Analyzer/: Semantic.cpp  Semantic.h
Serialization/: IDeserializer.h  ISerializer.h  JsonDeserializer.cpp  JsonDeserializer.h  JsonSerializer.cpp  JsonSerializer.h
Tests/: ActionTests.cpp  DocumentTests.cpp  GeometryTests.cpp  ParserTests.cpp  TestFramework.h  TestRunner.cpp
Tokenizer/: Token.h  Tokenizer.cpp  Tokenizer.h
Visualization/: IShapeRenderer.h  SlideRenderer.cpp  SlideRenderer.h  SvgShapeRenderer.cpp  SvgShapeRenderer.h
run_tests.dSYM/Contents/Resources/DWARF/: run_tests
